# opensplice-example

./: .gitignore  CMakeLists.txt  README.md
src/: publisher.cpp  subscriber.cpp
